其他的一些修改（error的修改等）

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -71,6 +71,8 @@
 					{{#dd.link-to "chart-circle"}}
 						Chart-Circle{{/dd.link-to}}
 				{{/n.dropdown}}
+				{{#n.link-to "without-code"}}{{bp-icon icon='edit'}}<span class="ml-2">WithoutCode</span>{{/n.link-to}}
+
 			{{/bp-nav}}
 		</nav>
 	</aside>
